<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@drawable/shape_dialog_round"
    app:cardElevation="10dp"
    android:layout_margin="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <!-- Title -->
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:text="@string/add_member"/>

        <!-- Edit Text -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textCapWords"
            android:textSize="16sp"
            android:textColor="@color/l1"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <!-- Cancel Button -->
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/mGreen"
                />

            <!-- OK Button -->
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/mGrey"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>