<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/customToolBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:titleTextColor="@color/white"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardElevation="@dimen/card_view_elevation"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/My_Profile_Activity_Picture_Size"
                android:layout_height="@dimen/My_Profile_Activity_Picture_Size"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                app:civ_border_color="@color/g11"
                app:civ_border_width="@dimen/nav_image_circular_border_width"
                android:contentDescription="@string/image_contentDescription"
                android:src="@drawable/ic_user_holder"
                android:layout_gravity="center_horizontal"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/l1"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="25dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/l1"
                    android:textSize="16sp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="25dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/profile_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/l1"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="25dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/profile_Update_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/intro_text_marginStartEnd"
                android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
                android:background="@drawable/rounded_btn_signup_screen"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_paddingTopBottom"
                android:paddingBottom="@dimen/btn_paddingTopBottom"
                android:text="@string/update"
                android:textColor="@color/black"
                android:textSize="@dimen/btn_text_size" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>





</LinearLayout>