<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.CreateBoardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/customToolBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:titleTextColor="@color/white"
        />

        <androidx.cardview.widget.CardView
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardElevation="@dimen/card_view_elevation"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/nav_user_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="@dimen/nav_content_margin_StartEnd"
                    android:layout_marginEnd="@dimen/nav_content_margin_StartEnd"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="15dp"
                    app:civ_border_color="@color/l1"
                    app:civ_border_width="@dimen/nav_image_circular_border_width"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_user_holder" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="380dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/BoardName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/board_name"
                        android:layout_marginEnd="10dp"
                        android:inputType="textCapWords"
                        android:layout_marginStart="10dp"
                        android:textSize="16sp"
                        android:textColor="@color/l1"
                        android:layout_marginTop="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/intro_text_marginStartEnd"
                    android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_btn_signup_screen"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/create"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_text_size" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


</LinearLayout>